k8s/stock-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-service
spec:
  type: ClusterIP
  selector:
    component: stock
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stock
  template:
    metadata:
      labels:
        component: stock
    spec:
      containers:
        - name: stock-service
          image: stock:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "1Gi"
              cpu: "1"
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "app:app"]
          ports:
            - containerPort: 5000
