k8s/services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-api
  name: payment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-api
  strategy: {}
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      containers:
        - args:
            - gunicorn
            - -b
            - 0.0.0.0:5000
            - app:app
          image: payment-service:latest
          imagePullPolicy: IfNotPresent
          name: payment-api
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-api
  name: payment-api-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: payment-api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stock-api
  name: stock-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-api
  strategy: {}
  template:
    metadata:
      labels:
        app: stock-api
    spec:
      containers:
        - args:
            - gunicorn
            - -b
            - 0.0.0.0:5000
            - app:app
          image: stock-service:latest
          imagePullPolicy: IfNotPresent
          name: stock-api
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock-api
  name: stock-api-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: stock-api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-api
  name: order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-api
  strategy: {}
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
        - args:
            - gunicorn
            - -b
            - 0.0.0.0:5000
            - app:app
          image: order-service:latest
          imagePullPolicy: IfNotPresent
          name: order-api
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-api
  name: order-api-service
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: order-api
  type: ClusterIP

---
# Gateway service 
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: nginx:latest
          name: gateway
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  type: NodePort
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    app: gateway
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-service
 labels:
  app: gateway
 annotations: 
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - http:
      paths:
        - path: /orders/?(.*)
          pathType: Prefix
          backend:
            service:
              name: order-api-service
              port:
                number: 5000
        - path: /stock/?(.*)
          pathType: Prefix
          backend:
            service:
              name: stock-api-service
              port:
                number: 5000
        - path: /payment/?(.*)
          pathType: Prefix
          backend:
            service:
              name: payment-api-service
              port:
                number: 5000
